--- a/packages/omi-ast-parser/package.json
+++ b/packages/omi-ast-parser/package.json
@@ -1,7 +1,7 @@
 {
   "name": "omi-ast-parser",
   "version": "0.1.0",
-  "main": "index.ts",
+  "main": "./dist/index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts",
