--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -7,7 +7,9 @@
     "dev": "ts-node index.ts"
   },
   "dependencies": {
-    "omi-ast-parser": "0.1.0",
+    "@types/prettier": "^2.7.0",
+    "omi-ast-parser": "^0.1.0",
+    "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
   }
 }
