--- a/packages/omi-client/tsconfig.json
+++ b/packages/omi-client/tsconfig.json
@@ -1,14 +1,15 @@
 {
   "compilerOptions": {
     "target": "es2016",
-    "module": "commonjs",
+    "module": "ESNext",
     "rootDir": ".",
     "outDir": "./dist",
     "declaration": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node"
   },
   "exclude": ["./**/*.test.ts", "./dist/**/*.ts"]
 }
