--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -1,10 +1,11 @@
 {
   "name": "omi-codegen",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "test": "ts-node lib/typescript/index.test.ts"
   },
   "dependencies": {
     "@types/prettier": "^2.7.0",
