--- a/packages/omi-ast-parser/package.json
+++ b/packages/omi-ast-parser/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts",
-    "test": "ts-node index.test.ts"
+    "test": "ts-node index.test.ts",
+    "build": "tsc"
   },
   "dependencies": {
     "ts-node": "^10.9.1"
