--- a/packages/omi-client/package.json
+++ b/packages/omi-client/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
-    "dev": "ts-node index.ts"
+    "dev": "ts-node index.ts",
+    "build": "tsc"
   },
   "license": "MIT",
   "dependencies": {
