--- a/packages/omi-server/tsconfig.json
+++ b/packages/omi-server/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ESNext",
     "module": "commonjs",
     "rootDir": ".",
     "outDir": "./dist",
@@ -8,7 +8,8 @@
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "experimentalDecorators": true
   },
-  "exclude": ["./**/*.test.ts", "./dist/**/*.ts"]
+  "exclude": ["./**/*.test.ts", "./dist/**/*"]
 }
