feat: Codegen和OmiServer更新 现在可以在Controller内部直接声明函数，而无需使用箭头函数了

--- a/packages/omi-server/package.json
+++ b/packages/omi-server/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts",
-    "build": "tsc"
+    "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
     "@types/koa": "^2.13.5",
