--- a/packages/omi-server/package.json
+++ b/packages/omi-server/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "omi-server",
+  "name": "@omi-stack/omi-server",
   "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts",
+    "publish": "npm run build && npm publish --access public",
     "build": "tsc -p tsconfig.build.json"
   },
   "dependencies": {
@@ -18,5 +19,19 @@
   },
   "devDependencies": {
     "ts-node": "^10.9.1"
-  }
+  },
+  "types": "./dist/index.d.ts",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sheason2019/omi.git"
+  },
+  "author": "sheason",
+  "bugs": {
+    "url": "https://github.com/sheason2019/omi/issues"
+  },
+  "homepage": "https://github.com/sheason2019/omi#readme",
+  "description": ""
 }
