--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "omi-codegen",
-  "version": "1.0.0",
+  "name": "@omi-stack/omi-codegen",
+  "version": "0.1.0",
   "main": "dist/index.js",
   "license": "MIT",
   "scripts": {
     "dev": "ts-node index.ts",
     "test": "ts-node lib/typescript/index.test.ts",
+    "publish": "npm run build && npm publish --access public",
     "build": "tsc"
   },
   "dependencies": {
@@ -13,5 +14,20 @@
     "omi-ast-parser": "^0.1.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
-  }
+  },
+  "types": "./dist/index.d.ts",
+  "directories": {
+    "lib": "lib"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sheason2019/omi.git"
+  },
+  "author": "sheason",
+  "bugs": {
+    "url": "https://github.com/sheason2019/omi/issues"
+  },
+  "homepage": "https://github.com/sheason2019/omi#readme",
+  "description": ""
 }
