feat: update codegen scope

--- a/packages/omi-server/package.json
+++ b/packages/omi-server/package.json
@@ -33,5 +33,6 @@
     "url": "https://github.com/sheason2019/omi/issues"
   },
   "homepage": "https://github.com/sheason2019/omi#readme",
-  "description": ""
+  "description": "",
+  "gitHead": "71128f96cf4f7cc2f3ba9551b203c5b9ab79372a"
 }
