--- a/packages/omi-idl-extension/package.json
+++ b/packages/omi-idl-extension/package.json
@@ -57,5 +57,6 @@
     "glob": "^8.0.3",
     "mocha": "^10.0.0",
     "typescript": "^4.7.4"
-  }
+  },
+  "gitHead": "71128f96cf4f7cc2f3ba9551b203c5b9ab79372a"
 }
