--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -3,6 +3,9 @@
   "version": "0.1.11",
   "main": "dist/index.js",
   "license": "MIT",
+  "bin": {
+    "omi-codegen": "./dist/cli.js"
+  },
   "scripts": {
     "dev": "ts-node index.ts",
     "test": "ts-node lib/typescript/index.test.ts",
@@ -11,6 +14,7 @@
   "dependencies": {
     "@omi-stack/omi-ast-parser": "^0.1.11",
     "@types/prettier": "^2.7.0",
+    "commander": "^9.4.0",
     "prettier": "^2.7.1",
     "ts-node": "^10.9.1"
   },
