feat: nodejs server端将仅生成接口

--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "ts-node index.ts",
-    "test": "ts-node lib/typescript/index.test.ts",
+    "test": "ts-node ./index.test.ts",
     "build": "tsc"
   },
   "dependencies": {
