--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -12,7 +12,7 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@omi-stack/omi-ast-parser": "^0.1.11",
+    "@omi-stack/omi-ast-parser": "^0.2.0",
     "@types/prettier": "^2.7.0",
     "commander": "^9.4.0",
     "prettier": "^2.7.1",
@@ -32,6 +32,5 @@
   },
   "homepage": "https://github.com/sheason2019/omi#readme",
   "description": "",
-  "gitHead": "7c6c12d799840f0db3f2ff679818beeed04ce305",
-  "devDependencies": {}
+  "gitHead": "7c6c12d799840f0db3f2ff679818beeed04ce305"
 }
