--- a/packages/omi-codegen/tsconfig.json
+++ b/packages/omi-codegen/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES2022",
     "module": "CommonJS",
     "rootDir": ".",
     "outDir": "./dist",
