--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -12,7 +12,8 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@omi-stack/omi-ast-parser": "^0.2.7",
+    "@omi-stack/omi-ast-parser": "^0.2.9",
+    "@types/node": "^18.7.23",
     "@types/prettier": "^2.7.0",
     "commander": "^9.4.0",
     "prettier": "^2.7.1",
