feat: 修改了Typescript Optional的产物

--- a/packages/omi-codegen/tsconfig.json
+++ b/packages/omi-codegen/tsconfig.json
@@ -11,5 +11,5 @@
     "skipLibCheck": true,
     "moduleResolution": "node"
   },
-  "exclude": ["./**/*.test.ts", "./dist/**/*.ts"]
+  "exclude": ["./**/*.test.ts", "./dist/**/*.ts", "./test-dist/**/*.ts"]
 }
