--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -13,11 +13,13 @@
   },
   "dependencies": {
     "@omi-stack/omi-ast-parser": "^0.3.0",
-    "@types/node": "^18.7.23",
-    "@types/prettier": "^2.7.0",
     "commander": "^9.4.0",
-    "prettier": "^2.7.1",
-    "ts-node": "^10.9.1"
+    "prettier": "^2.7.1"
+  },
+  "devDependencies": {
+    "ts-node": "^10.9.1",
+    "@types/node": "^18.7.23",
+    "@types/prettier": "^2.7.0"
   },
   "types": "./dist/index.d.ts",
   "directories": {
