--- a/packages/omi-codegen/package.json
+++ b/packages/omi-codegen/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@omi-stack/omi-codegen",
-  "version": "0.3.9",
+  "version": "0.4.0",
   "main": "dist/index.js",
   "license": "MIT",
   "bin": {
@@ -12,14 +12,14 @@
     "build": "tsc"
   },
   "dependencies": {
-    "@omi-stack/omi-ast-parser": "^0.3.0",
+    "@omi-stack/omi-ast-parser": "^0.4.0",
     "commander": "^9.4.0",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
-    "ts-node": "^10.9.1",
     "@types/node": "^18.7.23",
-    "@types/prettier": "^2.7.0"
+    "@types/prettier": "^2.7.0",
+    "ts-node": "^10.9.1"
   },
   "types": "./dist/index.d.ts",
   "directories": {
