feat/go-ast: 为Typescript生成common接口和server接口

--- a/omi.config.json
+++ b/omi.config.json
@@ -1,6 +1,6 @@
 [
   {
-    "entry": ["./hello.omi"],
+    "entry": ["packages/omi-codegen/test-idl/common.omi"],
     "lang": "ts",
     "targetDir": "./omi",
     "method": "server"
