feat/go-ast: 为Typescript生成Client源代码

--- a/omi.config.json
+++ b/omi.config.json
@@ -2,7 +2,13 @@
   {
     "entry": ["packages/omi-codegen/test-idl/common.omi"],
     "lang": "ts",
-    "targetDir": "./omi",
+    "targetDir": "./test/server-ts/idl-lib",
     "method": "server"
+  },
+  {
+    "entry": ["packages/omi-codegen/test-idl/common.omi"],
+    "lang": "ts",
+    "targetDir": "./test/client-ts/idl-lib",
+    "method": "client"
   }
 ]
