--- a/node/package.json
+++ b/node/package.json
@@ -12,5 +12,8 @@
   "devDependencies": {
     "@types/node": "^18.11.17",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "prettier": "^2.8.1"
   }
 }
