refact: 移除原本的Monorepo Node项目

--- a/omi.config.json
+++ b/omi.config.json
@@ -1,12 +1,12 @@
 [
   {
-    "entry": ["packages/omi-codegen/test-idl/common.omi"],
+    "entry": ["test/test-idl/common.omi"],
     "lang": "ts",
     "targetDir": "./test/server-ts/idl-lib",
     "method": "server"
   },
   {
-    "entry": ["packages/omi-codegen/test-idl/common.omi"],
+    "entry": ["test/test-idl/common.omi"],
     "lang": "ts",
     "targetDir": "./test/client-ts/idl-lib",
     "method": "client"
