fix: 适配了Nestjs 修复了引用同一个文件而Method不同时会缺少生成产物的问题

--- a/omi.config.json
+++ b/omi.config.json
@@ -1,6 +1,6 @@
 [
   {
-    "entry": ["test/test-idl/common.omi"],
+    "entry": ["test/test-idl/common.omi", "test/test-idl/todo.omi"],
     "lang": "ts",
     "targetDir": "./test/server-ts/idl-lib",
     "method": "server"
