feat: 添加 Go Server Codegen

--- a/omi.config.json
+++ b/omi.config.json
@@ -10,5 +10,19 @@
     "lang": "ts",
     "targetDir": "./test/client-ts/idl-lib",
     "method": "client"
+  },
+  {
+    "entry": ["test/test-idl/common.omi"],
+    "lang": "go",
+    "targetDir": "./test/client-go/idl-lib/test",
+    "method": "client",
+    "packageRoot": "github.com/sheason2019/idl-lib"
+  },
+  {
+    "entry": ["test/test-idl/common.omi"],
+    "lang": "go",
+    "targetDir": "./test/server-go/idl-lib/test",
+    "method": "server",
+    "packageRoot": "github.com/sheason2019/idl-lib"
   }
 ]
