feat: 支持在entry中输入文件夹路径以解析文件夹下所有omi文件

--- a/omi.config.json
+++ b/omi.config.json
@@ -19,7 +19,7 @@
     "packageRoot": "github.com/sheason2019/idl-lib"
   },
   {
-    "entry": ["test/test-idl/todo.omi", "test/test-idl/user.omi"],
+    "entry": ["test/test-idl"],
     "lang": "go",
     "targetDir": "./test/server-go/idl-lib",
     "method": "server",
